[package]
name = "tiangong-lang"
version = "0.2.0"  # 升级版本号
edition = "2021"
description = "天工开物编程语言 - 基于文言文与繁体中文的高级编程语言"
authors = ["天工语开发团队"]
license = "GPL-3.0"
repository = "https://github.com/HyperXenonZephyr/TianGongKaiWu-Programming_Language"
readme = "README.md"
keywords = ["programming-language", "chinese", "classical-chinese", "interpreter", "compiler"]
categories = ["command-line-utilities", "development-tools", "parsing"]
homepage = "https://github.com/HyperXenonZephyr/TianGongKaiWu-Programming_Language"
documentation = "https://github.com/HyperXenonZephyr/TianGongKaiWu-Programming_Language#readme"

[[bin]]
name = "天工語"
path = "src/main.rs"

[dependencies]
logos = "0.14"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
unicode-normalization = "0.1"
unicode-segmentation = "1.11"
unicode-width = "0.1"

# 可选依赖，根据实际使用情况启用
# lazy_static = "1.4"
# rayon = "1.8"
# dashmap = "5.5"
# indexmap = "2.2"
# smallvec = "1.13"
# parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"
insta = "1.38"

[features]
default = []
full = ["chrono/clock", "regex/perf"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[workspace]
members = ["."]